logs/sheetmusic.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/libsheetmusic'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/mingus'...
Listing './lib/python3.5/site-packages/mingus/containers'...
Compiling './lib/python3.5/site-packages/mingus/containers/track.py'...
***   File "./lib/python3.5/site-packages/mingus/containers/track.py", line 65
    raise InstrumentRangeError, \
                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mingus/core'...
Compiling './lib/python3.5/site-packages/mingus/core/chords.py'...
***   File "./lib/python3.5/site-packages/mingus/core/chords.py", line 769
    raise NoteFormatError, "Unrecognised note '%s' in chord '%s'"\
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mingus/extra'...
Compiling './lib/python3.5/site-packages/mingus/extra/lilypond.py'...
***   File "./lib/python3.5/site-packages/mingus/extra/lilypond.py", line 224
    print 'Executing: %s' % command
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mingus/extra/musicxml.py'...
***   File "./lib/python3.5/site-packages/mingus/extra/musicxml.py", line 316
    zi.external_attr = 0660 << 16L
                          ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/mingus/midi'...
Compiling './lib/python3.5/site-packages/mingus/midi/midi_file_in.py'...
***   File "./lib/python3.5/site-packages/mingus/midi/midi_file_in.py", line 68
    print "Don't know how to parse this yet"
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mingus/midi/midi_file_out.py'...
***   File "./lib/python3.5/site-packages/mingus/midi/midi_file_out.py", line 58
    print "Couldn't open '%s' for writing." % file
                                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mingus/midi/pyfluidsynth.py'...
***   File "./lib/python3.5/site-packages/mingus/midi/pyfluidsynth.py", line 37
    raise ImportError, "Couldn't find the FluidSynth library."
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mingus-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sheetmusic'...
Listing './lib/python3.5/site-packages/sheetmusic-0.0.4.egg-info'...
Listing './mingus_examples'...
Listing './mingus_examples/pygame-drum'...
Compiling './mingus_examples/pygame-drum/pygame-drum.py'...
***   File "./mingus_examples/pygame-drum/pygame-drum.py", line 65
    except pygame.error, message:
                       ^
SyntaxError: invalid syntax

Listing './mingus_examples/pygame-piano'...
Compiling './mingus_examples/pygame-piano/pygame-piano.py'...
***   File "./mingus_examples/pygame-piano/pygame-piano.py", line 75
    except pygame.error, message:
                       ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
